[package]
name = "data-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "data_rs"
crate-type = ["cdylib"]

[dependencies]
polars = {version = "*",  features = ["parquet", "lazy"]}
parquet = "*"
serde_json = "*"
glob = "*"
anyhow = "*"
itertools = "*"
serde = { version = "*", features = ["derive"] }
rand = "0.9.1"
clap = { version = "*", features = ["derive"] }
pyo3 = { version = "*", features = ["abi3-py312"] }
memmap2 = "*"
rkyv = "*"
numpy = "*"
structview = "*"
indicatif = "*"
